--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -3,5 +3,13 @@
   "trashOption": "local",
   "newFileLocation": "root",
   "attachmentFolderPath": "/",
-  "showUnsupportedFiles": true
+  "showUnsupportedFiles": true,
+  "alwaysUpdateLinks": true,
+  "pdfExportSettings": {
+    "pageSize": "Letter",
+    "landscape": false,
+    "margin": "0",
+    "downscalePercent": 100
+  },
+  "promptDelete": false
 }
